--- a/houtaidemo/package.json
+++ b/houtaidemo/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "element-plus": "^2.6.0",
+    "nprogress": "^0.2.0",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0"
   },
