--- a/houtaidemo/package.json
+++ b/houtaidemo/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^9.22.0",
+    "fast-glob": "^3.3.2",
     "husky": "^8.0.0",
     "postcss": "^8.4.35",
     "postcss-html": "^1.6.0",
@@ -53,6 +54,7 @@
     "unplugin-auto-import": "^0.17.5",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.1.4",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.8.27"
   }
 }
