--- a/houtaidemo/package.json
+++ b/houtaidemo/package.json
@@ -17,12 +17,14 @@
     "@element-plus/icons-vue": "^2.3.1",
     "element-plus": "^2.6.0",
     "nprogress": "^0.2.0",
+    "unplugin-icons": "^0.18.5",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.0.3",
     "@commitlint/config-conventional": "^19.0.3",
+    "@iconify-json/ep": "^1.1.14",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "eslint": "^8.57.0",
