--- a/houtaidemo/.env.development
+++ b/houtaidemo/.env.development
@@ -4,7 +4,9 @@ ENV = 'development'
 
 # VITE_APP_API_HOST = 'http://localhost:3000'
 # 服务器base 地址
-VITE_BASE_URL = 'http://127.0.0.1:3000'
+VITE_BASE_URL = 'http://127.0.0.1'
+# 应用端口
+VITE_APP_PORT = 3002
 # 开发环境
 VITE_APP_BASE_API = '/api'
 
